# caffe

./: CMakeLists.txt  conanfile.py
cmake/: Cuda.cmake  Dependencies.cmake  ProtoBuf.cmake  Targets.cmake
include/caffe/: blob.hpp  common.hpp  net.hpp
include/caffe/util/: upgrade_proto.hpp
src/caffe/: CMakeLists.txt  common.cpp  layer_factory.cpp  net.cpp  solver.cpp  solver_factory.cpp
src/caffe/layers/: hdf5_data_layer.cpp  window_data_layer.cpp
src/caffe/solvers/: sgd_solver.cpp
src/caffe/util/: hdf5.cpp  io.cpp  math_functions.cpp
